# word-frequencies

./: Cargo.toml  README.md
src/: create_frequencies.rs  main.rs  split.rs  topkwords.rs  util.rs
src/dictionaries/: en.txt  pl.txt
