[package]
name = "word-frequencies"
version = "0.1.0"
authors = ["Asim Ihsan <asim.ihsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam = "0.7.3"
flate2 = "1.0.13"
num_cpus = "1.11.1"
rand = "0.7.2"
scoped_threadpool = "0.1.9"
serde_json = "1.0.44"
unicode-normalization = "0.1.11"

[profile.release]
debug = true
lto = true
codegen-units = 1